--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
 
 #add_btn {
     padding: 0.5rem 1rem;
-    background-color: #ccc;
+    background-color: var(--third-color);
     outline: none;
     border: none;
     width: 100%;
@@ -228,9 +228,7 @@ body {
 
 /* For mobile phones: */
 @media only screen and (max-width: 710px) {
-    body {
-        /* font-size: 16px; */
-    }
+    
 
     .appTitle {
         font-size: 16px;
